# PhoneFront

./: CMakeLists.txt  Main.qml  appPhoneFront.notifyrc  main.cpp
SerialPort/: Phone.cpp  Phone.hpp  SerialPort.cpp  SerialPort.hpp  call.cpp  call.hpp  enums.hpp  main.cpp  maps.hpp  sms.cpp  sms.hpp
sqliteconnector/: sqliteclient.cpp  sqliteclient.hpp
ui/: CallDialog.qml  DialDialog.qml  DialForm.qml  IncomingCallButton.qml  IncomingCallDialog.qml
ui/components/: CallButton.qml  DialFormButton.qml  FragmentHeader.qml  MarginRow.qml  StatusText.qml
ui/dialogs/: AddEditContactDialog.qml  ContactDialog.qml  DialDialog.qml  IncomingCallDialog.qml  SendMessageDialog.qml
ui/fragments/: CallsFragment.qml  ContactsFragment.qml  MessagesFragment.qml  StatusFragment.qml
